--- a/33_00_課題_06_配列.html
+++ b/33_00_課題_06_配列.html
@@ -4,10 +4,6 @@
 <meta charset="UTF-8"/>
 </head>
 <body>
-  <script>
-    /*
-        ここにコードを書きます。
-    */
-  </script>
+  <script src="06_配列_課題.js" charset="UTF-8"></script>
 </body>
 </html>
